chore: dependency updates